--- a/sign_up_form/index.html
+++ b/sign_up_form/index.html
@@ -25,20 +25,26 @@
         <h2>Start your journey today.</h2>
         <form action="">
             <fieldset>
-                <legend>Let's do this!
+                <legend>
+                    Let's do this!
                 </legend>
-                <label for="fname">First Name</label>
-                <input type="text" id="fname" name="fname">
-                <label for="lname">Last Name</label>
-                <input type="text" id="lname" name="lname">
-                <label for="email">Email</label>
-                <input type="text" id="email" name="email">
-                <label for="phone">Phone Number</label>
-                <input type="text" id="phone" name="phone">
-                <label for="password">Password</label>
-                <input type="text" id="password" name="password">
-                <label for="confirm_password">Confirm Password</label>
-                <input type="text" id="confirm_password" name="confirm-password">
+                        <label for="fname">First Name</label>
+                        <label for="lname">Last Name</label>
+
+                        <input type="text" id="fname" name="fname">
+                        <input type="text" id="lname" name="lname">
+
+                        <label for="email">Email</label>
+                        <label for="phone">Phone Number</label>
+
+                        <input type="email" id="email" name="email">
+                        <input type="text" id="phone" name="phone">
+
+                        <label for="password">Password</label>
+                        <label for="confirm_password">Confirm Password</label>
+
+                        <input type="password" id="password" name="password">
+                        <input type="password" id="confirm_password" name="confirm-password">
             </fieldset>    
             <button type="submit">Create Account</button>
             <p>Already have an account? <a href="./login">Log in.</a></p>
